<resources>
    <string name="app_name">Calculator</string>
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="zero_button">0</string>
    <string name="multiplication">x</string>
    <string name="division">/</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="equal_sign">=</string>
    <string name="correction">C</string>
    <string name="button_clear">A</string>
    <string name="button_store">S</string>
    <string name="button_recall">R</string>
    <string name="formular_entry">Formula Entry</string>
    <string name="decimal">.</string>
</resources>
